Unit Tests - ProfileView,ImageListView

--- a/ImageFeed/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
+++ b/ImageFeed/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
@@ -52,6 +52,28 @@
                ReferencedContainer = "container:ImageFeed.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EAE280CA2CC2861E00E9A6DC"
+               BuildableName = "ProfileViewTests.xctest"
+               BlueprintName = "ProfileViewTests"
+               ReferencedContainer = "container:ImageFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EAE280D72CC286DB00E9A6DC"
+               BuildableName = "ProfileViewTest.xctest"
+               BlueprintName = "ProfileViewTest"
+               ReferencedContainer = "container:ImageFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
